# numerical_recipe

./: .gitignore  CMakeLists.txt  README.md
src/: gauss_quadrature_rule.hpp
test/: test.gauss_quadrature.cc
